fix(index, team): Remove line break in hero heading, remove padding-top of hero section, change director-card padding
en.toml, id.toml
- Remove line break in hero heading
style.css
- Remove padding-top in hero section
team.css
- Change director-card padding: 3rem 2.5rem -> padding: 2rem 1rem

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -392,7 +392,7 @@ section:last-of-type { border-bottom: none; }
     min-height              : 100vh;
     display                 : grid;
     grid-template-columns   : 1fr 1fr;
-    padding-top             : 80px;
+    padding-top             : 0px;
     background              : var(--hero-bg);
     color                   : var(--hero-text);
     overflow                : hidden;
